# AstroPowerBox

./: .envrc  .gitignore  .gitmodules  README.md  extra_envs.ini  extra_script.py  extra_script_redux.py  history.json  package-lock.json  package.json  platformio.ini
.github/workflows/: main.yml
esp32/: extra_script.py  platformio.ini
esp32/indi/: indi_astropowerbox.cpp
esp32/src/: async_led.h  commandparser.cpp  commandparser.h  configuration_custom.h  configuration_lolin_c3_mini.h  configuration_lolin_s2_mini.h  configuration_wroom_v1.h  fan.cpp  fan.h  history.cpp  history.h  main.cpp  pd_protocol.cpp  pwm_output.cpp  pwm_output.h  serial_interface.cpp  serial_interface.h  settings.h  (+5 more)
frontend/: index.html  package-lock.json  package.json
indi/: CMakeLists.txt  indi_astropowerbox.h
sbc-backend/: app.py
src/: ambient.cpp  ambient.h  async_led.h  asyncbufferedtcplogger.cpp  asyncbufferedtcplogger.h  bufferedlogger.h  commandparser.cpp  commandparser.h  configuration.h  configuration_lolin_c3_mini.h  configuration_lolin_s2_mini.h  datalogger.h  datalogger_none.cpp  datalogger_sd.cpp  heater.cpp  heater.h  history.cpp  history.h  influxdb.cpp  influxdb.h  jsonresponse.h  main.cpp  metricsresponse.h  pd_protocol.h  powermonitor.cpp  powermonitor.h  pwm_output.cpp  pwm_output.h  settings.cpp  settings.h  statusled.cpp  statusled.h  utils.cpp  utils.h  validation.h  webserver.cpp  webserver.h  wifimanager.cpp  wifimanager.h
web/: index.html  package-lock.json  package.json  proxy-server  vite.config.js
web-redux/: package-lock.json  package.json  proxy-server
(+70 files in other folders)
